# boolean-algebra-simplification

./: Cargo.toml
src/: consts.rs  gates.rs  main.rs  parser.rs  simplify.rs
