[package]
name = "boolean_algebra_simplification"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_lossless = "allow"

[dependencies]
logos = "0.14.0"
thiserror = "1.0.57"
